tests/ui/label/label-underscore.stderr
error: invalid label name `'_`
  --> $DIR/label-underscore.rs:2:5
   |
LL |     '_: loop {
   |     ^^

error: invalid label name `'_`
  --> $DIR/label-underscore.rs:3:15
   |
LL |         break '_
   |               ^^

error: aborting due to 2 previous errors

